# mcp

./: .cursorignore  .gitignore  AI_STARTER.md  Makefile  README.md  REGRESSION_TESTS.md  check_server.sh  kill_server.sh  pyproject.toml  requirements.txt  restart_server.sh  tox.ini
.cursor/: mcp.json
.cursor/rules/: cli-usage.mdc  code-quality.mdc  project-structure.mdc  server-architecture.mdc  testing-guidelines.mdc
.github/workflows/: ci.yml
docs/: documentation-resources.md  index.md  installation.md  overview.md  quickstart.md
docs/advanced-usage/: index.md  server-capabilities.md  writing-mcp-clients.md
docs/core-concepts/: authentication.md  images.md  index.md  prompts.md  resources.md  tools.md
docs/examples/: echo-server.md  index.md  sqlite-explorer.md
docs/running-your-server/: claude-desktop-integration.md  development-mode.md  direct-execution.md  index.md  mounting-asgi-server.md  streamable-http-transport.md
mcp_python_sdk_docs/: MCP_PYTHON_SDK_original.md  what-is-mcp.md
mcp_python_sdk_docs/advanced-usage/: low-level-server.md  mcp-primitives.md
mcp_python_sdk_docs/core-concepts/: context.md  server.md
mcp_simple_tool/: __main__.py  cli.py  server.py
mcp_simple_tool/cli/: __init__.py  call_cmd.py  check_cmd.py  restart_cmd.py  start_cmd.py  stop_cmd.py  utils.py
mcp_simple_tool/semantic_search/: __init__.py  indexing.py  search.py
mcp_simple_tool/server/: __init__.py  app.py  config.py  doc_reader.py  handlers.py  http.py
scripts/: build_doc_index.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_call_command.py  test_get_content_tool.py  test_search_tool.py  test_server.py
tests/unit/: __init__.py  conftest.py  test_cli.py  test_doc_reader.py  test_handlers.py  test_http.py  test_main.py  test_server.py  (+1 more)
