[project]
name = "mcp-simple-tool"
version = "0.1.0"
description = "A simple MCP server exposing a website fetching tool"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "llm", "automation", "web", "fetch"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anyio>=4.5", 
    "click>=8.1.0", 
    "httpx>=0.27", 
    "mcp", 
    "requests>=2.0.0", 
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0"
]

[project.scripts]
mcp-simple-tool = "mcp_simple_tool.cli:main"
build-doc-index = "mcp_simple_tool.semantic_search.indexing:build_index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_simple_tool"]

[tool.pyright]
include = ["mcp_simple_tool"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]

# Added for Mission 1
[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp_simple_tool.semantic_search.*"
disallow_any_generics = false

[tool.pytest.ini_options]
addopts = "-q -ra --timeout=20"
asyncio_mode = "auto"
